--- a/index.html
+++ b/index.html
@@ -1,1 +1,105 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Yue Sun's Resume</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 20px;
+            background-color: #f4f4f4;
+        }
+        header {
+            text-align: center;
+            padding: 10px;
+            background-color: #007BFF;
+            color: white;
+        }
+        section {
+            margin: 20px 0;
+            padding: 20px;
+            background-color: white;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h2 {
+            color: #007BFF;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        li {
+            margin: 5px 0;
+        }
+    </style>
+</head>
+<body>
+
+<header>
+    <h1>Yue Sun</h1>
+    <p>Contact: 484.541.0434 | Email: yus516@lehigh.edu | Location: Bethlehem, PA, 18015</p>
+</header>
+
+<section>
+    <h2>Qualifications</h2>
+    <ul>
+        <li>Several publications at top-tier computer science conferences, including KDD, AAAI, DAC</li>
+        <li>Strong programming experience: 8 years of Python, 3 years of Java/Scala, 2 years of C++</li>
+        <li>Skilled in Pytorch, Tensorflow, and developing tools including Microservices, Git, JVM, Jconsole, Maven, Gradle</li>
+        <li>Strong knowledge of Explainable AI and Time Series Analysis</li>
+        <li>More than 2 years of full-time work experience as an algorithm engineer</li>
+    </ul>
+</section>
+
+<section>
+    <h2>Education</h2>
+    <ul>
+        <li><strong>Ph.D. in Electrical and Computer Engineering</strong> - Lehigh University (Aug. 2020 – Present)</li>
+        <li><strong>M.S. in Electrical and Computer Engineering</strong> - University of Rochester (Aug. 2016 – May 2018)</li>
+        <li><strong>B.S. in Optical Information Science and Technology</strong> - Jilin University (Sep. 2012 – Jul. 2016)</li>
+    </ul>
+</section>
+
+<section>
+    <h2>Research Interests</h2>
+    <ul>
+        <li>Machine Learning: Time Series Prediction and Explanation, Anomaly Detection, Physics-informed Networks</li>
+        <li>Explainable AI: Model-intrinsic-explainable Neural Networks, Post-hoc Explanation</li>
+    </ul>
+</section>
+
+<section>
+    <h2>Research Experience</h2>
+    <h3>Lehigh University ECE (Aug. 2020 – Present)</h3>
+    <p>Research Assistant</p>
+    <ul>
+        <li>Developed novel Graph Neural Networks integrating domain differential equations.</li>
+        <li>Created innovative GNN models, RDGCN and SIRGCN, for improved performance.</li>
+    </ul>
+</section>
+
+<section>
+    <h2>Publications</h2>
+    <ul>
+        <li>Yue Sun et al., "Incorporating Domain Differential Equations into Graph Convolutional Networks to Lower Generalization Discrepancy." AAAI (2024)</li>
+        <li>Yue Sun et al., "Reaction-Diffusion Graph Ordinary Differential Equation Networks: Traffic-Law-Informed Speed Prediction under Mismatched Data." KDD (2023)</li>
+        <li>Yue Sun et al., "On the Generalization Discrepancy of Spatiotemporal Dynamics Informed Graph Convolutional Networks." Frontier of Mechanical Engineering (2024)</li>
+    </ul>
+</section>
+
+<section>
+    <h2>Honors & Awards</h2>
+    <ul>
+        <li>Lehigh Student Travel Grant, Lehigh University (2023)</li>
+        <li>AAAI AI4TS Oral Paper Award (2024)</li>
+        <li>KDD UrbComp Oral Paper Award (2023)</li>
+        <li>Outstanding Employee Award, Huawei (2019)</li>
+        <li>First Place Award, Graduate Poster Competition, University of Rochester (2017)</li>
+    </ul>
+</section>
+
+</body>
+</html>
